[FIX] responsive on mobile

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1246,21 +1246,26 @@ input {
 }
 
 //custom styles
-.skills {
-    display:table-row;
+
+.skillgrid {
+    display: grid;
+    grid-gap: 0.5rem;
+    grid-template-columns: repeat(auto-fit, 7rem);
 }
+
+//.skills {
+//    display:table-row;
+//}
 
 .skill {
     text-align: center;
-    display: table-cell;
     img {
-        height: 100px !important;
-        width: 100px !important;
-        margin: 0 !important;
-        min-width: 0 !important;
+        height: 7rem !important;
+        width: 7rem !important;
     }
 }
 
+//for inline figure links
 article {
     a {
         img {
